<resources>
    <string name="app_name">AndroidLab01</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="RadioButton">Radiobutton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="Switch">Switch</string>
    <string name="password">password</string>
    <string name="Login_Place">Login</string>
    <string name="Login_Hint">Login Name</string>
    <string name="Wdtd">What does this do?</string>
    <string name="LOGIN">LOGIN</string>
    <string name="dialog_message">Finish the activity?</string>
    <string name="dialog_title">CheckBox Options</string>
    <string name="ButtonTexttton">I am A Button</string>
    <string name="StartChat">Start Chat</string>

</resources>
